<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/mainframe"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputEmailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_your_email"
        android:textColor="@color/white"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewR"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textViewR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/registration_page"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_password"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailR"
        tools:layout_editor_absoluteX="1dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputRePasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_password"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordR"
        tools:layout_editor_absoluteX="1dp" />



    <Button
        android:id="@+id/createButtonR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputRePasswordR"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/teal_200"
        android:textSize="20sp"
        android:text="@string/register"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/loginButtonR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createButtonR"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@android:color/transparent"
        android:textSize="20sp"
        android:text="@string/existing_account_click_me_to_go_to_login_page"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>