<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/main_appbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/background"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/inputFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUsername"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/inputCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:minHeight="48dp"
                android:hint="@string/country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputFullName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/inputNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputCountry"
                android:hint="@string/number"
                tools:ignore="Autofill" />

            <CheckBox
                android:id="@+id/checkBox"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:text="@string/terms_conditions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGrp" />

            <Button
                android:id="@+id/buttonSetUp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/setup_account"
                android:backgroundTint="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="0dp"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                app:layout_constraintTop_toBottomOf="@+id/inputNumber"
                tools:ignore="MissingConstraints">
                <RadioButton
                    android:id="@+id/radioM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:checked="true"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/male"
                    tools:ignore="RtlHardcoded" />
                <RadioButton
                    android:id="@+id/radioF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:checked="false"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/female"
                    tools:ignore="RtlHardcoded" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>